--- a/apps/web/sys/user-panel.html
+++ b/apps/web/sys/user-panel.html
@@ -11,563 +11,20 @@
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <link rel="icon" type="image/png" sizes="192x192" href="../icons/icon-192.png" />
     <link rel="icon" type="image/png" sizes="512x512" href="../icons/icon-512.png" />
-    <style>
-      :root {
-        color-scheme: light dark;
-        --panel-max-width: min(980px, 100%);
-        --panel-gap: clamp(1.25rem, 3vw, 1.75rem);
-        --panel-surface: rgba(255, 255, 255, 0.92);
-        --panel-surface-strong: rgba(255, 255, 255, 0.98);
-        --panel-border: rgba(15, 23, 42, 0.12);
-        --panel-border-strong: rgba(15, 23, 42, 0.28);
-        --panel-muted: rgba(71, 85, 105, 0.82);
-        --panel-strong: rgba(15, 23, 42, 0.9);
-        --panel-accent: #2563eb;
-        --panel-accent-strong: #1d4ed8;
-        --panel-accent-soft: rgba(37, 99, 235, 0.16);
-        --panel-radius: 28px;
-        --panel-radius-sm: 18px;
-        --panel-shadow: 0 32px 64px rgba(15, 23, 42, 0.14);
-        --panel-shadow-soft: 0 16px 32px rgba(15, 23, 42, 0.12);
-        --panel-font: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-        --switch-off: rgba(148, 163, 184, 0.35);
-        --switch-handle: #ffffff;
-      }
-
-      @media (prefers-color-scheme: dark) {
-        :root {
-          --panel-surface: rgba(30, 41, 59, 0.78);
-          --panel-surface-strong: rgba(30, 41, 59, 0.9);
-          --panel-border: rgba(148, 163, 184, 0.18);
-          --panel-border-strong: rgba(148, 163, 184, 0.36);
-          --panel-muted: rgba(203, 213, 225, 0.75);
-          --panel-strong: rgba(241, 245, 249, 0.95);
-          --panel-shadow: 0 32px 72px rgba(15, 23, 42, 0.5);
-          --panel-shadow-soft: 0 18px 42px rgba(15, 23, 42, 0.4);
-          --switch-off: rgba(148, 163, 184, 0.28);
-          --switch-handle: rgba(15, 23, 42, 0.92);
-        }
-      }
-
-      *,
-      *::before,
-      *::after {
-        box-sizing: border-box;
-      }
-
-      body {
-        margin: 0;
-        font-family: var(--panel-font);
-        background: transparent;
-        color: var(--panel-strong);
-      }
-
-      h1,
-      h2,
-      h3,
-      h4 {
-        margin: 0;
-        font-weight: 600;
-        line-height: 1.15;
-        letter-spacing: -0.01em;
-      }
-
-      p {
-        margin: 0;
-      }
-
-      button,
-      input,
-      select {
-        font: inherit;
-      }
-
-      .user-panel {
-        margin: 0 auto;
-        padding: clamp(2rem, 4vw, 3rem);
-        max-width: var(--panel-max-width);
-        display: flex;
-        flex-direction: column;
-        gap: var(--panel-gap);
-      }
-
-      .user-panel__header {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        gap: clamp(1rem, 3vw, 2rem);
-        align-items: flex-start;
-      }
-
-      .user-panel__intro {
-        flex: 1 1 320px;
-        display: grid;
-        gap: 0.75rem;
-      }
-
-      .user-panel__eyebrow {
-        font-size: 0.875rem;
-        text-transform: uppercase;
-        letter-spacing: 0.12em;
-        font-weight: 600;
-        color: var(--panel-muted);
-      }
-
-      .user-panel__title {
-        font-size: clamp(2rem, 6vw, 2.75rem);
-      }
-
-      .user-panel__lead {
-        font-size: clamp(1rem, 2.5vw, 1.1rem);
-        color: var(--panel-muted);
-        max-width: 50ch;
-      }
-
-      .user-panel__meta {
-        flex: 0 0 auto;
-        min-width: min(320px, 100%);
-        padding: clamp(1rem, 3vw, 1.5rem);
-        background: var(--panel-surface);
-        border-radius: var(--panel-radius);
-        border: 1px solid var(--panel-border);
-        box-shadow: var(--panel-shadow-soft);
-        display: grid;
-        gap: 0.75rem;
-      }
-
-      .user-panel__meta div {
-        display: grid;
-        gap: 0.25rem;
-      }
-
-      .user-panel__meta dt {
-        font-size: 0.75rem;
-        letter-spacing: 0.08em;
-        text-transform: uppercase;
-        color: var(--panel-muted);
-      }
-
-      .user-panel__meta dd {
-        margin: 0;
-        font-weight: 600;
-      }
-
-      .user-panel__empty {
-        padding: clamp(2rem, 4vw, 2.5rem);
-        border-radius: var(--panel-radius);
-        border: 1px dashed var(--panel-border);
-        background: color-mix(in srgb, var(--panel-surface) 85%, transparent);
-        display: grid;
-        gap: 1rem;
-        text-align: center;
-        box-shadow: inset 0 0 0 1px color-mix(in srgb, var(--panel-border) 60%, transparent);
-      }
-
-      .user-panel__empty h2 {
-        font-size: clamp(1.5rem, 4vw, 1.85rem);
-      }
-
-      .user-panel__content {
-        display: block;
-      }
-
-      .user-panel__layout {
-        display: grid;
-        gap: var(--panel-gap);
-      }
-
-      @media (min-width: 720px) {
-        .user-panel__layout {
-          grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
-          grid-auto-flow: dense;
-          align-items: start;
-        }
-
-        .card--profile,
-        .card--devices {
-          grid-column: 1 / -1;
-        }
-
-        .card--summary {
-          grid-row: span 2;
-        }
-      }
-
-      .card {
-        background: var(--panel-surface);
-        border-radius: var(--panel-radius);
-        border: 1px solid var(--panel-border);
-        box-shadow: var(--panel-shadow);
-        padding: clamp(1.25rem, 3.5vw, 1.85rem);
-        display: grid;
-        gap: clamp(1rem, 3vw, 1.5rem);
-      }
-
-      .card__header {
-        display: flex;
-        align-items: flex-start;
-        justify-content: space-between;
-        gap: 1rem;
-      }
-
-      .card__subtitle {
-        margin-top: 0.5rem;
-        color: var(--panel-muted);
-        font-size: 0.95rem;
-        max-width: 52ch;
-      }
-
-      .badge {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        padding: 0.35rem 0.75rem;
-        border-radius: 999px;
-        font-size: 0.75rem;
-        font-weight: 600;
-        background: var(--panel-accent-soft);
-        color: var(--panel-accent-strong);
-        letter-spacing: 0.05em;
-        text-transform: uppercase;
-      }
-
-      .form {
-        display: grid;
-        gap: clamp(0.85rem, 2.5vw, 1.35rem);
-      }
-
-      fieldset {
-        margin: 0;
-        padding: 0;
-        border: 0;
-      }
-
-      .form__fieldset {
-        display: grid;
-        gap: 0.85rem;
-      }
-
-      legend {
-        font-size: 0.85rem;
-        letter-spacing: 0.08em;
-        text-transform: uppercase;
-        color: var(--panel-muted);
-        font-weight: 700;
-      }
-
-      .form__grid {
-        display: grid;
-        gap: 0.85rem;
-        grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      }
-
-      .form__grid--columns-3 {
-        grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
-      }
-
-      .form__field {
-        display: grid;
-        gap: 0.5rem;
-      }
-
-      label {
-        font-weight: 600;
-        font-size: 0.9rem;
-      }
-
-      input,
-      select {
-        padding: 0.75rem 1rem;
-        border-radius: var(--panel-radius-sm);
-        border: 1px solid color-mix(in srgb, var(--panel-border-strong) 70%, transparent);
-        background: var(--panel-surface-strong);
-        color: inherit;
-        transition: border-color 0.2s ease, box-shadow 0.2s ease;
-      }
-
-      input:focus,
-      select:focus {
-        outline: 3px solid color-mix(in srgb, var(--panel-accent) 45%, transparent);
-        outline-offset: 2px;
-        border-color: color-mix(in srgb, var(--panel-accent) 60%, transparent);
-        box-shadow: 0 0 0 6px color-mix(in srgb, var(--panel-accent) 12%, transparent);
-      }
-
-      .form__actions {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 0.75rem;
-        justify-content: flex-end;
-      }
-
-      .button {
-        display: inline-flex;
-        align-items: center;
-        justify-content: center;
-        gap: 0.5rem;
-        min-height: 3rem;
-        padding: 0.75rem 1.5rem;
-        border-radius: 18px;
-        border: 1px solid transparent;
-        cursor: pointer;
-        font-weight: 600;
-        text-decoration: none;
-        transition: transform 0.2s ease, box-shadow 0.2s ease, background 0.2s ease;
-      }
-
-      .button--primary {
-        background: linear-gradient(135deg, var(--panel-accent) 0%, var(--panel-accent-strong) 100%);
-        color: #ffffff;
-        box-shadow: 0 18px 36px rgba(37, 99, 235, 0.25);
-      }
-
-      .button--primary:hover,
-      .button--primary:focus-visible {
-        transform: translateY(-1px);
-        box-shadow: 0 24px 48px rgba(37, 99, 235, 0.3);
-      }
-
-      .button--ghost {
-        background: transparent;
-        border-color: color-mix(in srgb, var(--panel-border-strong) 65%, transparent);
-        color: inherit;
-      }
-
-      .button--ghost:hover,
-      .button--ghost:focus-visible {
-        transform: translateY(-1px);
-        box-shadow: 0 14px 28px rgba(15, 23, 42, 0.18);
-        background: color-mix(in srgb, var(--panel-surface-strong) 92%, transparent);
-      }
-
-      .form__feedback {
-        min-height: 1.25rem;
-        font-size: 0.9rem;
-        color: var(--panel-muted);
-      }
-
-      .form__feedback[data-state="success"] {
-        color: #0f766e;
-      }
-
-      .form__feedback[data-state="error"] {
-        color: #dc2626;
-      }
-
-      .switch-list {
-        display: grid;
-        gap: 0.75rem;
-      }
-
-      .switch {
-        display: grid;
-        grid-template-columns: auto 1fr;
-        gap: 0.75rem;
-        align-items: center;
-        cursor: pointer;
-      }
-
-      .switch input {
-        position: absolute;
-        opacity: 0;
-        pointer-events: none;
-      }
-
-      .switch__visual {
-        position: relative;
-        width: 48px;
-        height: 26px;
-        border-radius: 999px;
-        background: var(--switch-off);
-        border: 1px solid color-mix(in srgb, var(--panel-border-strong) 65%, transparent);
-        transition: background 0.2s ease, border-color 0.2s ease;
-      }
-
-      .switch__visual::after {
-        content: "";
-        position: absolute;
-        inset-block: 3px;
-        inset-inline-start: 3px;
-        width: 18px;
-        height: 18px;
-        border-radius: 50%;
-        background: var(--switch-handle);
-        box-shadow: 0 4px 10px rgba(15, 23, 42, 0.2);
-        transition: transform 0.2s ease;
-      }
-
-      .switch input:checked + .switch__visual {
-        background: var(--panel-accent);
-        border-color: var(--panel-accent-strong);
-      }
-
-      .switch input:checked + .switch__visual::after {
-        transform: translateX(22px);
-      }
-
-      .switch__label {
-        font-weight: 500;
-      }
-
-      .summary-identity {
-        display: grid;
-        grid-template-columns: auto 1fr;
-        gap: 1rem;
-        align-items: center;
-      }
-
-      .summary-avatar {
-        width: 56px;
-        height: 56px;
-        border-radius: 18px;
-        display: grid;
-        place-items: center;
-        font-weight: 700;
-        font-size: 1.35rem;
-        background: color-mix(in srgb, var(--panel-accent) 12%, transparent);
-        color: var(--panel-accent-strong);
-      }
-
-      .summary-role {
-        font-size: 0.75rem;
-        letter-spacing: 0.08em;
-        text-transform: uppercase;
-        color: var(--panel-muted);
-        font-weight: 600;
-      }
-
-      .summary-name {
-        font-size: 1.3rem;
-      }
-
-      .summary-email {
-        color: var(--panel-muted);
-        font-size: 0.9rem;
-      }
-
-      .summary-details,
-      .summary-metrics {
-        display: grid;
-        gap: 0.75rem;
-      }
-
-      .summary-details div,
-      .summary-metrics div {
-        display: flex;
-        justify-content: space-between;
-        gap: 1rem;
-      }
-
-      .summary-details dt,
-      .summary-metrics dt {
-        font-size: 0.85rem;
-        color: var(--panel-muted);
-      }
-
-      .summary-details dd,
-      .summary-metrics dd {
-        margin: 0;
-        font-weight: 600;
-        text-align: right;
-      }
-
-      .summary-list {
-        border-top: 1px solid color-mix(in srgb, var(--panel-border) 65%, transparent);
-        padding-top: 1rem;
-        display: grid;
-        gap: 0.5rem;
-      }
-
-      .summary-list-item {
-        display: flex;
-        justify-content: space-between;
-        gap: 1rem;
-        font-size: 0.9rem;
-      }
-
-      .summary-empty {
-        color: var(--panel-muted);
-        font-size: 0.9rem;
-      }
-
-      .device-list {
-        list-style: none;
-        padding: 0;
-        margin: 0;
-        display: grid;
-        gap: 1rem;
-      }
-
-      .device {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        gap: 0.75rem;
-        padding: 1rem 1.25rem;
-        border-radius: var(--panel-radius-sm);
-        border: 1px solid color-mix(in srgb, var(--panel-border) 70%, transparent);
-        background: color-mix(in srgb, var(--panel-surface-strong) 92%, transparent);
-      }
-
-      .device[data-status="revoked"] {
-        opacity: 0.8;
-      }
-
-      .device__info {
-        display: grid;
-        gap: 0.25rem;
-      }
-
-      .device__name {
-        font-weight: 600;
-      }
-
-      .device__meta {
-        font-size: 0.85rem;
-        color: var(--panel-muted);
-      }
-
-      .device__actions {
-        display: grid;
-        gap: 0.5rem;
-        justify-items: end;
-      }
-
-      .device__badge {
-        font-size: 0.75rem;
-        font-weight: 600;
-        letter-spacing: 0.05em;
-        text-transform: uppercase;
-        padding: 0.25rem 0.6rem;
-        border-radius: 999px;
-        background: color-mix(in srgb, var(--panel-accent) 18%, transparent);
-        color: var(--panel-accent-strong);
-      }
-
-      .device[data-status="revoked"] .device__badge {
-        background: rgba(239, 68, 68, 0.18);
-        color: #b91c1c;
-      }
-
-      .user-panel__footnote {
-        font-size: 0.85rem;
-        color: var(--panel-muted);
-        text-align: center;
-      }
-    </style>
+    <link rel="stylesheet" href="./panel.css" />
   </head>
   <body>
-    <div class="user-panel" data-panel-root data-state="loading">
-      <header class="user-panel__header">
-        <div class="user-panel__intro">
-          <p class="user-panel__eyebrow">Centro de preferências</p>
-          <h1 class="user-panel__title">Painel do usuário</h1>
-          <p class="user-panel__lead">
+    <div class="dashboard dashboard--user" data-panel-root data-state="loading">
+      <header class="dashboard__header">
+        <div class="dashboard__intro">
+          <p class="dashboard__eyebrow">Centro de preferências</p>
+          <h1 class="dashboard__title">Painel do usuário</h1>
+          <p class="dashboard__lead">
             Gerencie seus dados pessoais, controle notificações e mantenha a segurança das integrações conectadas ao
             shell base.
           </p>
         </div>
-        <dl class="user-panel__meta" data-panel-meta>
+        <dl class="dashboard__meta" data-panel-meta>
           <div>
             <dt>Atualização de perfil</dt>
             <dd data-profile-updated>—</dd>
@@ -582,7 +39,7 @@
           </div>
         </dl>
       </header>
-      <section class="user-panel__empty" data-empty-state hidden>
+      <section class="dashboard__empty" data-empty-state hidden>
         <h2>Faça login para continuar</h2>
         <p>
           Conecte-se ao shell para atualizar suas informações, salvar preferências personalizadas e liberar o acesso a
@@ -590,8 +47,8 @@
         </p>
         <button type="button" class="button button--primary" data-action="open-login">Acessar autenticação</button>
       </section>
-      <main class="user-panel__content" data-authenticated-content hidden>
-        <div class="user-panel__layout">
+      <main class="dashboard__content" data-authenticated-content hidden>
+        <div class="dashboard__layout">
           <section class="card card--profile" aria-labelledby="profile-settings-title">
             <header class="card__header">
               <div>
@@ -790,7 +247,7 @@
           </section>
         </div>
       </main>
-      <p class="user-panel__footnote">
+      <p class="dashboard__footnote">
         Preferências armazenadas localmente. Alterações no perfil sincronizam com os demais fluxos do shell base.
       </p>
     </div>
